# kworship

./: .gitignore  CMakeLists.txt  README  extract-messages.sh
design/: bible.txt  (+22 more)
kworship/: .gitignore  CMakeLists.txt  DesktopView.cpp  DesktopView.h  KwAbstractDisplayManager.cpp  KwApplication.cpp  KwApplication.h  KwBackgroundManager.cpp  KwBiblePlugin.cpp  KwBiblePlugin.h  KwDatabaseSetup.cpp  KwDatabaseSetup.h  KwDisplayManager.h  KwDocument.cpp  KwDocument.h  KwExport.h  KwExportFilter.cpp  KwExportFilter.h  KwFilter.cpp  KwFilter.h  KwFilterData.cpp  KwFilterData.h  KwFilterManager.cpp  KwFilterManager.h  KwFilterObject.cpp  KwFilterObject.h  KwImportFilter.cpp  KwImportFilter.h  KwKWorshipFilter.cpp  KwKWorshipFilter.h  KwKWorshipFilterData.cpp  KwKWorshipFilterData.h  KwLoadSaveFilter.cpp  KwLoadSaveFilter.h  KwOverlayManager.h  KwPlugin.cpp  KwPlugin.h  KwPluginManager.cpp  KwPluginManager.h  KwTextManager.cpp  (+27 more)
kworship/archive/: CMakeLists.txt  KwArchive.cpp  KwArchive.h  KwDataFile.cpp  KwDataFile.h  KwKWorshipFilter.cpp  KwResourceLink.cpp  KwResourceLink.h  KwResourceManager.cpp  KwResourceManager.h
kworship/bible/: CMakeLists.txt  KwBibleExport.h  KwBibleManager.cpp  KwBibleManager.h  KwBibleManagerBibleGateway.cpp  KwBibleManagerBibleGateway.h  KwBibleManagerSword.cpp  KwBibleManagerSword.h  KwBibleModule.cpp  KwBibleModule.h  KwBibleModuleBibleGateway.cpp  KwBibleModuleBibleGateway.h  KwBibleModuleSword.cpp  KwBibleModuleSword.h  KwBiblePassage.cpp  KwBiblePassage.h  KwBiblePlaylistItem.cpp  KwBiblePlaylistItem.h  KwBiblePlaylistItemNode.cpp  KwBiblePlaylistItemNode.h  KwBiblePlugin.cpp  KwBiblePlugin.h  kworship_bible.desktop  kworship_bible_backend.desktop  kworship_bibleui.rc
kworship/css/: CMakeLists.txt  KwCssAbstractStyle.cpp  KwCssAbstractStyle.h  KwCssAbstractStyleState.cpp  KwCssAbstractStyleState.h  KwCssSchema.h  KwCssScope.cpp  KwCssScope.h  KwCssScopeKey.cpp  KwCssScopeKey.h  KwCssStandardise.h  KwCssStyle.cpp  KwCssStyle.h  KwCssStyleRule.cpp  KwCssStyleRule.h  KwCssStyleSheet.cpp  KwCssStyleSheet.h  KwCssStyleSheetFile.cpp  KwCssStyleSheetFile.h  KwCssStyleState.h  KwCssStyleStates.cpp  KwCssStyleStates.h  KwCssStyles.cpp  KwCssStyles.h  KwCssUnprocessed.h
kworship/display/: CMakeLists.txt  KwAbstractDisplay.cpp  KwAbstractDisplay.h  KwAbstractDisplayManager.cpp  KwAbstractDisplayManager.h  KwAbstractLayer.cpp  KwAbstractLayer.h  KwBackgroundManager.cpp  KwBackgroundManager.h  KwDisplayManager.cpp  KwDisplayManager.h  KwDisplayMixer.cpp  KwDisplayMixer.h  KwDisplayStyles.cpp  KwDisplayStyles.h  KwImageLayer.cpp  KwImageLayer.h  KwImageWidget.cpp  KwImageWidget.h  KwLayerData.h  KwLocalDisplay.cpp  KwLocalDisplay.h  KwLocalDisplayController.cpp  KwLocalDisplayController.h  KwLocalDisplayPreview.cpp  KwLocalDisplayPreview.h  KwLoggingDisplay.cpp  KwLoggingDisplay.h  KwOverlayManager.cpp  KwOverlayManager.h  KwRemoteDisplay.h  KwRemoteDisplayController.cpp  KwRemoteDisplayController.h  KwTextLayer.cpp  KwTextLayer.h  KwTextManager.cpp  KwTextManager.h  KwTextStyle.cpp  KwTextStyle.h  KwVideoLayer.cpp  (+1 more)
kworship/filters/: CMakeLists.txt
kworship/media/: CMakeLists.txt  KwAbstractMediaPreferences.cpp  KwAbstractMediaPreferences.h  KwMediaControlWidget.cpp  KwMediaControlWidget.h  KwMediaControlWidgetAudio.cpp  KwMediaControlWidgetAudio.h  KwMediaControlWidgetSequence.cpp  KwMediaControlWidgetSequence.h  KwMediaControlWidgetVisual.cpp  KwMediaControlWidgetVisual.h  KwMediaItem.cpp  KwMediaItem.h  KwMediaManager.cpp  KwMediaManager.h  KwMediaPreferencesAudio.cpp  KwMediaPreferencesAudio.h  KwMediaPreferencesSequence.cpp  KwMediaPreferencesSequence.h  KwMediaPreferencesVisual.cpp  KwMediaPreferencesVisual.h
kworship/mimetypes/: CMakeLists.txt
kworship/playlist/: CMakeLists.txt  KwPlaylistFile.cpp  KwPlaylistFile.h  KwPlaylistFileNode.cpp  KwPlaylistFileNode.h  KwPlaylistImage.cpp  KwPlaylistImage.h  KwPlaylistItem.cpp  KwPlaylistItem.h  KwPlaylistList.cpp  KwPlaylistList.h  KwPlaylistListNode.cpp  KwPlaylistListNode.h  KwPlaylistModel.cpp  KwPlaylistModel.h  KwPlaylistNode.cpp  KwPlaylistNode.h  KwPlaylistNote.cpp  KwPlaylistNote.h  KwPlaylistNoteNode.cpp  KwPlaylistNoteNode.h  KwPlaylistPaged.cpp  KwPlaylistPaged.h  KwPlaylistPagedNode.cpp  KwPlaylistPagedNode.h  KwPlaylistPagedNodePage.cpp  KwPlaylistPagedNodePage.h  KwPlaylistPresentation.cpp  KwPlaylistPresentation.h  KwPlaylistReading.h  KwPlaylistSong.cpp  KwPlaylistSong.h  KwPlaylistSongNode.cpp  KwPlaylistSongNode.h  KwPlaylistSongNodeVerse.cpp  KwPlaylistSongNodeVerse.h  KwPlaylistText.cpp  KwPlaylistText.h  KwPlaylistTextNode.cpp  KwPlaylistTextNode.h  (+7 more)
kworship/songdb/: CMakeLists.txt  KwPlaylistSong.cpp  KwPlaylistSong.h  KwPlaylistSongNode.cpp  KwPlaylistSongNode.h  KwPlaylistSongNodeVerse.cpp  KwPlaylistSongNodeVerse.h  KwSongDatabaseModel.cpp  KwSongDatabaseModel.h  KwSongDatabaseNode.cpp  KwSongDatabaseNode.h  KwSongdb.cpp  KwSongdb.h  KwSongdbExport.h  KwSongdbFilter.h  KwSongdbFilterNode.cpp  KwSongdbFilterNode.h  KwSongdbLyrics.cpp  KwSongdbLyrics.h  KwSongdbLyricsLayout.cpp  KwSongdbLyricsLayout.h  KwSongdbLyricsOrder.cpp  KwSongdbLyricsOrder.h  KwSongdbModel.cpp  KwSongdbModel.h  KwSongdbNode.cpp  KwSongdbNode.h  KwSongdbPlugin.cpp  KwSongdbPlugin.h  KwSongdbSong.cpp  KwSongdbSong.h  KwSongdbSongBook.cpp  KwSongdbSongBook.h  KwSongdbSongBookItem.cpp  KwSongdbSongBookItem.h  KwSongdbSongBookSong.cpp  KwSongdbSongBookSong.h  (+24 more)
kworshipdisplay/: CMakeLists.txt  KwAbstractDisplay.cpp  KwAbstractDisplay.h  KwAbstractDisplayManager.h  KwAbstractLayer.h  KwBackgroundManager.cpp  KwBackgroundManager.h  KwDisplayManager.cpp  KwDisplayMixer.cpp  KwDisplayMixer.h  KwImageLayer.cpp  KwImageLayer.h  KwImageWidget.cpp  KwImageWidget.h  KwLayerData.h  KwLocalDisplay.cpp  KwLocalDisplay.h  KwLocalDisplayPreview.cpp  KwOverlayManager.cpp  KwRemoteDisplayController.cpp  KwTextLayer.cpp  KwTextManager.cpp  KwTextStyle.h  KwVideoLayer.cpp  KwVideoLayer.h  README
unipresent/: CMakeLists.txt  UpManager.cpp  UpManager.h  UpSlideEditWidget.cpp  UpSlidePreviewWidget.cpp  UpSlidePreviewWidget.h
(+142 files in other folders)
